k8s/flux-playground/traefik-minikube/home/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  template:
    spec:
      containers:
        - name: nginx
          volumeMounts:
            - name: home
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
      volumes:
        - name: home
          configMap:
            name: home
            items:
              - key: index.html
                path: index.html
