k8s/flux-playground/traefik-minikube/home/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`home.traefik.minikube`)
      services:
        - kind: Service
          name: nginx
          port: 80
